<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="9dp"
    android:orientation="vertical"
    tools:context="com.mahmoudreda.gamety.schedule.select_schedule">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonanimationcolor"
                android:text="@string/years"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_first_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/first_year" />

                <RadioButton
                    android:id="@+id/radioButton_second_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_year" />

                <RadioButton
                    android:id="@+id/radioButton_third_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third_year" />

                <RadioButton
                    android:id="@+id/radioButton_fourth_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_year" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonanimationcolor"
                android:text="@string/departments"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_general"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/general" />

                <RadioButton
                    android:id="@+id/radioButton_cs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cs" />

                <RadioButton
                    android:id="@+id/radioButton_is"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonanimationcolor"
                android:text="@string/semester"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton_first_semester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/first" />

                <RadioButton
                    android:id="@+id/radioButton_second_semester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second" />

                <RadioButton
                    android:id="@+id/radioButton_third_semester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonanimationcolor"
                android:text="@string/day"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditText_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sun_day"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonanimationcolor"
                android:text="@string/period"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditText_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/_1"
                android:inputType="number" />

            <EditText
                android:id="@+id/EditText_teacher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/teacher_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/EditText_course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/course_name"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/EditText_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/_9_11"
                    android:inputType="time"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/EditeText_holle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/_1220"
                    android:inputType="number"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/button_upload_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/buttonanimationcolor_sec"
                android:text="@string/upload"
                android:textColor="#FFF"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="345dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>