<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="9dp"
    xsi:schemaLocation="http://schemas.android.com/tools ">


    <TextView
        android:id="@+id/course_name_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        android:textAlignment="viewStart"
        android:textColor="#575757"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/year_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/years"
        android:textAlignment="center"
        android:textColor="#575757"
        tools:ignore="RelativeOverlap" />


    <EditText
        android:id="@+id/course_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/upload_doctor"
        android:layout_toStartOf="@+id/upload_doctor"
        android:autoLink="all"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:inputType="textUri"
        android:paddingEnd="9dp"
        android:text="@string/link"
        android:textColor="#575757"
        tools:ignore="LabelFor,RtlSymmetry" />

    <ImageView
        android:id="@+id/upload_doctor"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/year_doctor"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/hint_button"
        android:contentDescription="@string/todo"
        android:gravity="center"
        android:padding="5dp"
        android:src="@drawable/drive" />

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/course_link"
        android:orientation="horizontal"
        android:weightSum="5">


        <TextView
            android:id="@+id/day_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/hall"
            android:text="@string/day"
            android:textAlignment="viewStart"
            android:textColor="#575757" />

        <TextView
            android:id="@+id/time_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/time"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="#575757" />

        <TextView
            android:id="@+id/hall_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="38dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/lecture"
            android:text="@string/hall"
            android:textAlignment="center"
            android:textColor="#575757" />

        <TextView
            android:id="@+id/department_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/day"
            android:text="@string/departments"
            android:textAlignment="center"
            android:textColor="#575757" />

        <TextView
            android:id="@+id/semester_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/semester"
            android:textAlignment="viewStart"
            android:textColor="#575757" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignEnd="@+id/year_doctor"
        android:layout_below="@+id/liner"
        android:layout_marginTop="13dp"
        android:background="#DEDEDE" />


</RelativeLayout>