<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    tools:context="com.mahmoudreda.gamety.MainActivity_student">

    <Button
        android:id="@+id/Button_Schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button_dash_board"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:background="@color/colorHide"
        android:text="@string/schedule"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/Button_dash_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/colorHide"
        android:text="@string/dash_board"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/Button_courses_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Button_dash_board"
        android:layout_marginTop="42dp"
        android:background="@color/colorHide"
        android:text="@string/courses_content"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
