<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/packground"
    tools:context="com.mahmoudreda.gamety.MainActivity_secretary">

    <Button
        android:id="@+id/Button_dash_board_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/buttonanimationcolor"
        android:gravity="center"
        android:text="@string/new_dash_board"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/Button_schedule_sec_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Button_dash_board_sec"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/buttonanimationcolor"
        android:gravity="center"
        android:text="@string/dash_board"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/Button_schedule_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/Button_schedule_sec_display"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/buttonanimationcolor"
        android:gravity="center"
        android:text="@string/schedule"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/Button_link_techer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Button_schedule_sec"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/buttonanimationcolor"
        android:gravity="center"
        android:text="@string/techer_s_courses"
        android:textColor="@color/colorWhite" />
</RelativeLayout>
